helm/pihole/pihole-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - web
  routes:
    - match: Path(`/pihole`)
      kind: Rule
      priority: 10
      services:
        # This IngressRoute will be never called due to the redirect middleware
        - name: pihole-web
          port: 80
      #middlewares:
        #- name: https-redirect
